# CGM-Spectra-Analysis

./: .gitignore  README.md  analyze_spectra.py  batch_process.py  compile.sh  downloader.py
archive/old_scripts/: analyze_camel_spectra.py
logs/: job_3244733_4294967294.out
logs/2026-01-31/: job_2897318_12.out  job_2897318_18.out  job_2897318_19.out  job_2897318_20.out  job_2897318_23.out  job_2897318_24.out  job_2897318_3.out  job_2897318_4.out  job_2897318_5.out
logs/2026-02-02/: job_2901831_10.out  job_2901831_16.out  job_2901831_2.out  job_2901831_20.out  job_2901831_21.out  job_2901831_22.out  job_2901831_24.out  job_2901831_4.out  job_2901831_7.out
logs/2026-02-05/: job_2897318_1.out  job_2897318_13.out  job_2897318_15.out  job_2897318_16.out  job_2897318_17.out  job_2897318_2.out  job_2897318_6.out  job_2897318_7.out  job_2897318_8.out  job_2897318_9.out  job_2901831_1.out  job_2901831_14.out  job_2901831_18.out  job_2901831_19.out  job_2901831_23.out  job_2901831_25.out  job_2901831_5.out  job_2901831_6.out  job_2901831_8.out  job_2907598_10.out  job_2907598_11.out  job_2907598_12.out  job_2907598_13.out  job_2907598_14.out  job_2907598_16.out  job_2907598_2.err  job_2907598_2.out  job_2907598_20.out  job_2907598_22.out  job_2907598_24.out  job_2907598_25.out  job_2907598_4.out  job_2907598_9.out
logs/2026-02-07/: job_2897318_10.out  job_2897318_11.out  job_2897318_14.out  job_2897318_21.out  job_2897318_22.out  job_2897318_25.out  job_2897318_7.err  job_2901831_11.out  job_2901831_12.out  job_2901831_13.out  job_2901831_15.out  job_2901831_17.out  job_2901831_3.out  job_2901831_9.out  job_2907598_1.out  job_2907598_15.out  job_2907598_17.out  job_2907598_18.out  job_2907598_19.out  job_2907598_21.out  job_2907598_23.out  job_2907598_3.out  job_2907598_5.out  job_2907598_6.out  job_2907598_7.out  job_2907598_8.out  job_2912141_1.out  job_2912141_10.out  job_2912141_11.out  job_2912141_12.out  job_2912141_13.out  job_2912141_14.out  job_2912141_15.out  job_2912141_16.out  job_2912141_17.out  job_2912141_18.out  job_2912141_19.out  job_2912141_2.out  job_2912141_20.out  job_2912141_21.out  (+11 more)
logs/2026-02-21/: job_2935482_1.out  job_2935482_10.out  job_2935482_11.out  job_2935482_12.out  job_2935482_13.out  job_2935482_14.out  job_2935482_15.out  job_2935482_16.out  job_2935482_17.out  job_2935482_18.out  job_2935482_19.out  job_2935482_2.out  job_2935482_20.out  job_2935482_21.out  job_2935482_22.out  job_2935482_23.out  job_2935482_24.out  job_2935482_25.out  job_2935482_3.out  job_2935482_4.out  job_2935482_5.out  job_2935482_6.out  job_2935482_7.out  job_2935482_8.out  job_2935482_9.out
logs/2026-02-23/: job_2940964_1.err  job_2940964_1.out  job_2940964_10.err  job_2940964_10.out  job_2940964_11.err  job_2940964_11.out  job_2940964_12.err  job_2940964_12.out  job_2940964_13.err  job_2940964_13.out  job_2940964_14.err  job_2940964_14.out  job_2940964_15.err  job_2940964_15.out  job_2940964_16.err  job_2940964_16.out  job_2940964_17.err  job_2940964_17.out  job_2940964_18.err  job_2940964_18.out  job_2940964_19.err  job_2940964_19.out  job_2940964_2.err  job_2940964_2.out  job_2940964_20.err  job_2940964_20.out  job_2940964_21.err  job_2940964_21.out  job_2940964_22.err  job_2940964_22.out  job_2940964_23.err  job_2940964_23.out  job_2940964_24.err  job_2940964_3.err  (+16 more)
scripts/: analysis.py  analysis_cpp.py  cgm_cpp.py  comparison.py  config.py  data_export.py  degeneracy_test.py  exploratory.py  exploratory_cpp.py  fake_spectra_fix.py  hypothesis_test_p1.py  label_generator.py  matter_pk_test.py  plotting.py  sightline_manager.py  statistical_tests.py  utils.py
shell_scripts/: download_snapshots.sh  dw.sh  generate-and-analyze.sh  matter_pk.sbatch  run_analysis.sbatch  run_comps.sh  run_degeneracy.sbatch  simulations.txt  simulations_p1p2.txt  submit_all.sh
src/cpp/: CMakeLists.txt
src/cpp/analysis/: CMakeLists.txt  column_density.cpp  column_density.h  constants.h  flux_stats.cpp  flux_stats.h  line_width.cpp  line_width.h  power_spectrum.cpp  power_spectrum.h  temperature_density.cpp  temperature_density.h  voigt.cpp  voigt.h
src/cpp/bindings/: CMakeLists.txt  analysis_bindings.cpp  cgm_bindings.cpp  exploratory_bindings.cpp
src/cpp/cgm/: CMakeLists.txt  halos.cpp  halos.h
src/cpp/exploratory/: CMakeLists.txt  spectral_features.cpp  spectral_features.h
src/cpp/stats/: CMakeLists.txt
(+693 files in other folders)
